--- a/web/package.json
+++ b/web/package.json
@@ -1,13 +1,14 @@
 {
     "name": "dataspherestudio",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "private": true,
     "scripts": {
         "serve": "cd packages/dss && npm run serve",
-        "build": "cd packages/dss && npm run build",
+        "build": "npm run postinstall && cd packages/dss && npm run build",
         "lint": "vue-cli-service lint --no-fix",
         "fix": "vue-cli-service lint --fix",
-        "precommit": "lint-staged"
+        "precommit": "lint-staged",
+        "postinstall": "patch-package"
     },
     "husky": {
         "hooks": {
@@ -64,6 +65,7 @@
         "sass-loader": "7.3.1",
         "speed-measure-webpack-plugin": "1.5.0",
         "svg-sprite-loader": "5.0.0",
+        "patch-package": "6.2.2",
         "vue-cli-plugin-mockjs": "0.1.3",
         "vue-template-compiler": "2.6.12",
         "webpack-virtual-modules": "0.3.2"
