put back APIservice

--- a/web/config.json
+++ b/web/config.json
@@ -32,6 +32,14 @@
         "zh-CN": "dataService/i18n/zh.json"
       }
     },
+    "apiServices": {
+      "routes": "apiServices/router",
+      "module": "apiServices/module",
+      "i18n": {
+        "en": "apiServices/i18n/en.json",
+        "zh-CN": "apiServices/i18n/zh.json"
+      }
+    },
     "dataGovernance": {
       "routes": "dataGovernance/router",
       "module": "dataGovernance/module",
