Add configuration properties guide.sync.model in dss-guide-server.properties

--- a/conf/dss-guide-server.properties
+++ b/conf/dss-guide-server.properties
@@ -51,3 +51,5 @@ host.gitbook.path=/appcom/Install/ApacheInstall/gitbook_books
 target.gitbook.path=/appcom/Install/ApacheInstall
 #SUMMARY.md ignore absolve
 summary.ignore.model=km
+#sync model include: gitbook or database
+guide.sync.model=gitbook
