--- a/conf/dss-scriptis-server.properties
+++ b/conf/dss-scriptis-server.properties
@@ -33,3 +33,4 @@ wds.linkis.test.mode=false
 wds.linkis.test.user=
 
 wds.dss.scriptis.global.limits.exportResEnable=false
+wds.dss.scriptis.global.limits.exportTableEnable=false
