--- a/plugins/azkaban/linkis-jobtype/pom.xml
+++ b/plugins/azkaban/linkis-jobtype/pom.xml
@@ -98,6 +98,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.3</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
