--- a/plugins/dolphinscheduler/dss-dolphinscheduler-client/src/main/resources/linkis.properties
+++ b/plugins/dolphinscheduler/dss-dolphinscheduler-client/src/main/resources/linkis.properties
@@ -1,2 +1,5 @@
 wds.linkis.gateway.url=
 wds.linkis.flow.job.creator.v1=DolphinScheduler
+
+#wds.linkis.spark.engine.version=3.1.
+#wds.linkis.hive.engine.version=2.3.3
