--- a/dss-apps/dss-apiservice-server/pom.xml
+++ b/dss-apps/dss-apiservice-server/pom.xml
@@ -346,6 +346,12 @@
             <groupId>com.thoughtworks.xstream</groupId>
             <version>1.4.19</version>
         </dependency>
+        <dependency>
+            <groupId>com.webank.wedatasphere.dss</groupId>
+            <artifactId>dss-sso-integration-standard</artifactId>
+            <version>${dss.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
