--- a/dss-framework/dss-framework-admin-service/pom.xml
+++ b/dss-framework/dss-framework-admin-service/pom.xml
@@ -5,7 +5,7 @@
         <artifactId>dss</artifactId>
         <groupId>com.webank.wedatasphere.dss</groupId>
         <version>1.1.0</version>
-<!--        <relativePath>../../pom.xml</relativePath>-->
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>dss-framework-admin-service</artifactId>
