--- a/dss-orchestrator/orchestrators/dss-workflow/dss-linkis-node-execution/pom.xml
+++ b/dss-orchestrator/orchestrators/dss-workflow/dss-linkis-node-execution/pom.xml
@@ -24,6 +24,7 @@
         <artifactId>dss</artifactId>
         <groupId>com.webank.wedatasphere.dss</groupId>
         <version>1.1.0</version>
+        <relativePath>../../../../pom.xml</relativePath>
     </parent>
     
     <artifactId>dss-linkis-node-execution</artifactId>
