--- a/plugins/dolphinscheduler/dss-dolphinscheduler-token/pom.xml
+++ b/plugins/dolphinscheduler/dss-dolphinscheduler-token/pom.xml
@@ -23,6 +23,7 @@
         <artifactId>dss-plugin-dolphinscheduler</artifactId>
         <groupId>com.webank.wedatasphere.dss</groupId>
         <version>1.1.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
