--- a/dss-apps/dss-data-api/pom.xml
+++ b/dss-apps/dss-data-api/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>dss</artifactId>
         <groupId>com.webank.wedatasphere.dss</groupId>
         <relativePath>../../pom.xml</relativePath>
-        <version>1.1.0</version>
+        <version>1.1.0.7-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>dss-data-api</artifactId>
