--- a/dss-orchestrator/orchestrators/dss-workflow/dss-linkis-node-execution/pom.xml
+++ b/dss-orchestrator/orchestrators/dss-workflow/dss-linkis-node-execution/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>dss</artifactId>
         <groupId>com.webank.wedatasphere.dss</groupId>
-        <version>1.1.0</version>
+        <version>1.1.0.7-SNAPSHOT</version>
         <relativePath>../../../../pom.xml</relativePath>
     </parent>
     
