--- a/dss-apps/dss-scriptis-server/pom.xml
+++ b/dss-apps/dss-scriptis-server/pom.xml
@@ -36,6 +36,11 @@
     <dependencies>
         <dependency>
             <groupId>com.webank.wedatasphere.dss</groupId>
+            <artifactId>dss-framework-proxy-user-service</artifactId>
+            <version>${dss.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.webank.wedatasphere.dss</groupId>
             <artifactId>dss-common</artifactId>
             <version>${dss.version}</version>
             <scope>provided</scope>
