--- a/dss-framework/dss-framework-admin-service/pom.xml
+++ b/dss-framework/dss-framework-admin-service/pom.xml
@@ -27,7 +27,7 @@
         <!--TODO 一个需要干掉的dependency-->
         <dependency>
             <groupId>com.webank.wedatasphere.dss</groupId>
-            <artifactId>dss-common</artifactId>
+            <artifactId>dss-framework-proxy-user-service</artifactId>
             <version>${dss.version}</version>
             <scope>provided</scope>
         </dependency>
