add scriptis-server config.

--- a/conf/dss-scriptis-server.properties
+++ b/conf/dss-scriptis-server.properties
@@ -34,3 +34,6 @@ wds.linkis.test.user=
 
 wds.dss.scriptis.global.limits.exportResEnable=false
 wds.dss.scriptis.global.limits.exportTableEnable=false
+wds.dss.scriptis.global.limits.downloadResEnable=false
+wds.dss.scriptis.global.limits.resCopyEnable=false
+wds.dss.scriptis.global.limits.proxyEnable=false
