--- a/web/packages/dss/package.json
+++ b/web/packages/dss/package.json
@@ -13,7 +13,6 @@
   },
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build-sandbox": "vue-cli-service build --mode sandbox"
+    "build": "vue-cli-service build"
   }
 }
