--- a/dss-framework/dss-framework-project-server/pom.xml
+++ b/dss-framework/dss-framework-project-server/pom.xml
@@ -42,6 +42,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.webank.wedatasphere.dss</groupId>
+            <artifactId>dss-framework-proxy-user-service</artifactId>
+            <version>${dss.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <scope>provided</scope>
