--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,12 @@
     "version": "1.1.6",
     "private": true,
     "scripts": {
-        "serve": "npm run postinstall && cd packages/dss && npm run serve",
-        "build": "npm run postinstall && cd packages/dss && npm run build",
+        "serve": "cd packages/dss && npm run serve",
+        "build": "cd packages/dss && npm run build",
+        "serve-sandbox": "cd packages/dss && npm run serve --configfile=config.sandbox.json",
+        "build-sandbox": "cd packages/dss && npm run build --configfile=config.sandbox.json",
+        "serve-scriptis": "cd packages/dss && npm run serve --module=scriptis --micro_module=scriptis",
+        "build-scriptis": "cd packages/dss && npm run build --module=scriptis --micro_module=scriptis",
         "lint": "vue-cli-service lint --no-fix",
         "fix": "vue-cli-service lint --fix",
         "precommit": "lint-staged",
