--- a/conf/dss-framework-orchestrator-server.properties
+++ b/conf/dss-framework-orchestrator-server.properties
@@ -44,3 +44,4 @@ wds.dss.server.cs.clear.env=DEV
 
 ##export file dir
 wds.dss.server.export.url=/appcom/tmp/dss
+wds.dss.server.import.valid.immediately=false
