--- a/dss-appconn/appconns/dss-dolphinscheduler-appconn/pom.xml
+++ b/dss-appconn/appconns/dss-dolphinscheduler-appconn/pom.xml
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>28.2-android</version>
+            <version>30.0-jre</version>
         </dependency>
 
 
