--- a/dss-apps/dss-scriptis-server/pom.xml
+++ b/dss-apps/dss-scriptis-server/pom.xml
@@ -280,6 +280,12 @@
         </plugins>
         <resources>
             <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <resource>
                 <directory>${basedir}/src/main/resources</directory>
             </resource>
         </resources>
