--- a/web/packages/shared/package.json
+++ b/web/packages/shared/package.json
@@ -2,7 +2,6 @@
   "name": "@dataspherestudio/shared",
   "version": "1.1.8",
   "dependencies": {
-    "dexie": "2.0.4",
-    "dt-sql-parser": "1.2.1"
+    "dexie": "2.0.4"
   }
 }
