--- a/dss-apps/dss-data-api/dss-data-api-server/pom.xml
+++ b/dss-apps/dss-data-api/dss-data-api-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dss</artifactId>
         <groupId>com.webank.wedatasphere.dss</groupId>
-        <version>1.1.0.7-SNAPSHOT</version>
+        <version>1.1.0.9-SNAPSHOT</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>com.webank.wedatasphere.dss</groupId>
             <artifactId>dss-sso-integration-standard</artifactId>
-            <version>1.1.0.7-SNAPSHOT</version>
+            <version>${dss.version}</version>
             <scope>provided</scope>
         </dependency>
 
