--- a/web/config.sandbox..json
+++ b/web/config.sandbox..json
@@ -75,6 +75,10 @@
       "options": null
     }
   },
+  "components": {
+    "WeEditorLsp": "editorLsp/index.js",
+    "WeEditor": "editor/index.js"
+  },
   "conf": {
     "app_name": "DataSphere Studio",
     "app_logo": "dss/assets/images/dssLogo.png",
