--- a/dss-framework/dss-framework-orchestrator-server/pom.xml
+++ b/dss-framework/dss-framework-orchestrator-server/pom.xml
@@ -182,6 +182,12 @@
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-storage</artifactId>
             <version>${linkis.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-text</artifactId>
+                    <groupId>org.apache.commons</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
